--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /week9-week9_18.Moving/nbproject/private/
 /week8-week8_16.SkiJumping/build/
 /week9-week9_17.FirstPackages/build/
+/week9-week9_18.Moving/build/
