--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /week8-week8_16.SkiJumping/build/
 /week9-week9_17.FirstPackages/build/
 /week9-week9_18.Moving/build/
+/week9-week9_19.MethodArgumentValidation/build/
