--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /week9-week9_17.FirstPackages/build/
 /week9-week9_18.Moving/build/
 /week9-week9_19.MethodArgumentValidation/build/
+/week10-week10_32.DifferentBoxes/nbproject/private/
