--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /week11-week11_41.DrawingBoard/nbproject/private/
 /week11-week11_43.GameOfLife/nbproject/private/
 /week11-week11_42.MovingFigure/nbproject/private/
+/week11-week11_39.ClickEffect/build/
