--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /week11-week11_42.MovingFigure/nbproject/private/
 /week11-week11_39.ClickEffect/build/
 /week11-week11_41.DrawingBoard/build/
+/week11-week11_42.MovingFigure/build/
